# andras-hypermodern-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
src/andras_hypermodern_python/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
