[tool.poetry]
name = "andras-hypermodern-python"
version = "0.1.0"
description = "A dummy project to try the hypoermodern tools for python"
authors = ["Andras Szabo <andras.szabo.81@gmail.com>"]
license = "MIT"
homepage = "https://github.com/AndrasSzabo/andras-hypermodern-python"
repository = "https://github.com/AndrasSzabo/andras-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
hmpy = "andras_hypermodern_python.console:main"
