[tool.poetry]
name = "andras-hypermodern-python"
version = "0.1.0"
description = "A dummy project to try the hypoermodern tools for python"
authors = ["Andras Szabo <andras.szabo.81@gmail.com>"]
license = "MIT"
homepage = "https://github.com/AndrasSzabo/andras-hypermodern-python"
repository = "https://github.com/AndrasSzabo/andras-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
requests = "^2.26.0"
types-requests = "^2.26.3"
desert = "^2020.11.18"
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.2"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.11.29"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.930"
pytype = {version = "^2021.12.15", python = "3.9.9"}
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^0.15.10"
Pygments = "^2.11.1"
Sphinx = "^4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
hmpy = "andras_hypermodern_python.console:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["andras_hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
